all minor issues resolved and FCM working

--- a/.env.example
+++ b/.env.example
@@ -40,7 +40,22 @@ BREVO_SENDER_NAME=Your Company
 # SECURITY
 # ===========================================
 JWT_SECRET=your_super_secret_jwt_key_min_32_chars
-CORS_ORIGIN=https://yourdomain.com
+
+# CORS allowed origins (comma-separated for multiple)
+# For production, specify your exact frontend domain(s)
+# Example: https://app.yourdomain.com,https://admin.yourdomain.com
+# During development, leave empty to use defaults (localhost:5173, localhost:3000)
+ALLOWED_ORIGINS=https://yourdomain.com
+
+# ===========================================
+# FIREBASE CLOUD MESSAGING (Push Notifications)
+# ===========================================
+# Option 1: Path to service account JSON file
+FIREBASE_SERVICE_ACCOUNT_PATH=./firebase-service-account.json
+
+# Option 2: JSON string (for deployment platforms like Vercel/Railway)
+# FIREBASE_SERVICE_ACCOUNT={"type":"service_account","project_id":"...","private_key":"..."}
+
 
 # ===========================================
 # SCALING TIPS
