--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
+    "firebase-admin": "^13.6.0",
+    "helmet": "^8.1.0",
     "inngest": "^3.49.3",
     "ioredis": "^5.9.2",
     "joi": "^18.0.2",
